feat：添加财务图表